globus-gss-assist (10.8-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:30 -0400

globus-gss-assist (10.7-3+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:57 -0400

globus-gss-assist (10.7-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:42 -0500

globus-gss-assist (10.7-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 16:03:14 -0500

globus-gss-assist (10.6-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 07:25:52 -0500

globus-gss-assist (10.5-2+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Tue, 25 Feb 2014 07:25:29 -0500

globus-gss-assist (10.5-1+gt6.@distro@) @distro@; urgency=low

  * Eliminate script initializer use

 -- Globus Toolkit <support@globus.org>  Thu, 20 Feb 2014 13:29:30 -0500

globus-gss-assist (10.4-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Tue, 11 Feb 2014 12:41:14 -0500

globus-gss-assist (10.3-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Tue, 11 Feb 2014 11:56:47 -0500

globus-gss-assist (10.2-1+gt6.@distro@) @distro@; urgency=low

  * Test fixes

 -- Globus Toolkit <support@globus.org>  Tue, 11 Feb 2014 11:45:50 -0500

globus-gss-assist (10.1-1+gt6.@distro@) @distro@; urgency=low

  * Fix test credential file permssions

 -- Globus Toolkit <support@globus.org>  Wed, 29 Jan 2014 09:29:16 -0500

globus-gss-assist (10.0-2+gt6.@distro@) @distro@; urgency=low

  * Update dependencies

 -- Globus Toolkit <support@globus.org>  Tue, 28 Jan 2014 17:16:03 -0500
