@@ -1,3 +1,9 @@
+globus-gss-assist (10.9-1+gt6.@distro@) @distro@; urgency=low
+
+  * Use globus_libc_[un]setenv
+
+ -- Globus Toolkit <support@globus.org>  Fri, 23 May 2014 12:50:43 -0400
+
 globus-gss-assist (10.8-1+gt6.@distro@) @distro@; urgency=low
 
   * Version bump for consistency
